/**
 * Copyright (C) 2009-2014 Lightbend Inc. <http://www.lightbend.com>
 */
syntax = "proto3";
option csharp_namespace = "TCP";
option java_package = "akka.remote.testconductor";
option optimize_for = SPEED;

message Wrapper {
  Hello hello = 1;
  EnterBarrier barrier = 2;
  InjectFailure failure = 3;
  string done = 4;
  AddressRequest addr = 5;
}

message Hello {
  string name = 1;
  Address address = 2;
}

enum BarrierOp {
  BarrierOp_RESERVED = 0;
  Enter = 1;
  Fail = 2;
  Succeeded = 3;
  Failed = 4;
}

message EnterBarrier {
  string name = 1;
  BarrierOp op = 2;
  int64 timeout = 3;
}

message AddressRequest {
  string node = 1;
  Address addr = 2;
}

message Address {
  string protocol = 1;
  string system = 2;
  string host = 3;
  int32 port = 4;
}

enum FailType {
  FailType_RESERVED = 0;
  Throttle = 1;
  Disconnect = 2;
  Abort = 3;
  Exit = 4;
  Shutdown = 5;
  ShutdownAbrupt = 6;
}

enum Direction {
  Direction_RESERVED = 0;
  Send = 1;
  Receive = 2;
  Both = 3;
}

message InjectFailure {
  FailType failure = 1;
  Direction direction = 2;
  Address address = 3;
  float rateMBit = 6;
  int32 exitValue = 7;
}
